[package]
name = "zonebuilder"
version = "0.1.0"
authors = ["Robin Lovelace"]
edition = "2018"
description = "A Rust crate for building zones"
license = "MIT"

[dependencies]
geo = { version = "0.17.1", features=["use-serde"] }
geojson = { version = "0.22.2", features=["geo-types"] }
serde_json = { version = "1.0.0" }
structopt = "0.3.21"
